--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack serve --open-app-name \"google-chrome\""
+    "start": "webpack serve --open-app-name \"google-chrome\"",
+    "watch": "npm-watch"
+  },
+  "watch": {
+    "build": "./src/*.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +32,8 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "uuid": "^9.0.0"
+    "npm-watch": "^0.11.0",
+    "uuid": "^9.0.0",
+    "watch": "^0.13.0"
   }
 }
