Refactor and fix: changes made according to code review
Separate display from app logic, fix functions not returning to anything, group display state variables into a state object

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "npm-watch"
   },
   "watch": {
-    "build": "./src/*.js"
+    "build": "./src/js/*.js"
   },
   "repository": {
     "type": "git",
