--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "colorette": "^2.0.20",
     "npm-watch": "^0.11.0",
     "uuid": "^9.0.0",
     "watch": "^0.13.0"
